--- a/cgi/main.html
+++ b/cgi/main.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1>Demo page of <a href="http://www.tom.sfc.keio.ac.jp/~sakai/hiki/?hsPTQ" target="_top">PTQ</a></h1>
+<h1>Demo page of <a href="http://msakai.jp/hiki/?hsPTQ" target="_top">PTQ</a></h1>
 
 <p>
 <form method="get" action="ptq.cgi" accept-charset="utf-8 us-ascii" target="result">
